add working e-mail address

--- a/contact-me.html
+++ b/contact-me.html
@@ -8,8 +8,8 @@
   <body>
     <h1>Contact Details</h1>
     <p>My Address</p>
-    <p>07723794561204</p>
-    <p>myemail@mail.com</p>
+    <p>XXX-XXX-XXX</p>
+    <p>iva.sucic42@gmail.com</p>
     <hr>
 
     <form action="mailto:iva.sucic42@gmail.com" method="post" enctype="text/plain">
